# SyncX-Rasterizer

./: .gitignore  CMakeLists.txt  README.md
include/core/: benchmark.hpp  displayer.hpp  io_interface.hpp  loader.hpp  object.hpp  pipeline.hpp  renderer.hpp  scene.hpp  texture.hpp
include/math/: aabb.hpp  linear.hpp  matrix.hpp  matrix.inl  transfrom.hpp  triangle.hpp  vector.hpp  vector.inl  vertex.hpp
src/core/: CMakeLists.txt  displayer.cpp  io_interface.cpp  loader.cpp  pipeline.cpp  renderer.cpp  texture.cpp
src/test/: CMakeLists.txt  ImagePrinterTest.cpp  LinearTest.cpp  LoaderPrototypeTest.cpp  MipmapLayersDisplay.cpp  MipmapPrototype.cpp  RendererPipelineTest.cpp  TextureInterpolationTest.cpp  TexturePrototypeTest.cpp  VectorTest.cpp  general.cpp
